refactor swaggo cli in Makefile
