# internal/services/product-service/product/features/getting_products/endpoints/v1/get_products_endpoint.go
@@ -1,12 +1,12 @@
-package v1
+package endpoints_v1
 
 import (
 	"github.com/labstack/echo/v4"
 	"github.com/mehdihadeli/go-mediatr"
 	"github.com/meysamhadeli/shop-golang-microservices/internal/pkg/http/echo/middleware"
 	"github.com/meysamhadeli/shop-golang-microservices/internal/pkg/utils"
-	v1 "github.com/meysamhadeli/shop-golang-microservices/internal/services/product-service/product/features/getting_products/dtos/v1"
-	query_v1 "github.com/meysamhadeli/shop-golang-microservices/internal/services/product-service/product/features/getting_products/queries/v1"
+	"github.com/meysamhadeli/shop-golang-microservices/internal/services/product-service/product/features/getting_products/dtos/v1"
+	queries_v1 "github.com/meysamhadeli/shop-golang-microservices/internal/services/product-service/product/features/getting_products/queries/v1"
 	"github.com/meysamhadeli/shop-golang-microservices/internal/services/product-service/shared/contracts"
 	"net/http"
 )
@@ -29,8 +29,8 @@ func (ep *getProductsEndpoint) MapRoute() {
 // @Description Get all products
 // @Accept json
 // @Produce json
-// @Param GetProductsRequestDto query v1.GetProductsRequestDto false "GetProductsRequestDto"
-// @Success 200 {object} v1.GetProductsResponseDto
+// @Param GetProductsRequestDto query dtos.GetProductsRequestDto false "GetProductsRequestDto"
+// @Success 200 {object} dtos.GetProductsResponseDto
 // @Security ApiKeyAuth
 // @Router /api/v1/products [get]
 func (ep *getProductsEndpoint) getAllProducts() echo.HandlerFunc {
@@ -43,15 +43,15 @@ func (ep *getProductsEndpoint) getAllProducts() echo.HandlerFunc {
 			return echo.NewHTTPError(http.StatusBadRequest, err)
 		}
 
-		request := &v1.GetProductsRequestDto{ListQuery: listQuery}
+		request := &dtos.GetProductsRequestDto{ListQuery: listQuery}
 		if err := c.Bind(request); err != nil {
 			ep.Configuration.Log.Warn("Bind", err)
 			return echo.NewHTTPError(http.StatusBadRequest, err)
 		}
 
-		query := query_v1.NewGetProducts(request.ListQuery)
+		query := queries_v1.NewGetProducts(request.ListQuery)
 
-		queryResult, err := mediatr.Send[*query_v1.GetProducts, *v1.GetProductsResponseDto](ctx, query)
+		queryResult, err := mediatr.Send[*queries_v1.GetProducts, *dtos.GetProductsResponseDto](ctx, query)
 
 		if err != nil {
 			ep.Configuration.Log.Warnf("GetProducts", err)
